# topsis-msd-improvement-actions

./: LICENSE  MSDTransformer.py  README.md  README.rst  bus_example.ipynb  environment.yml  main (2).py  main.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  test_MSDTransformer.py  test_MSDTransformer_calculate.py  test_MSDTransformer_checkInput.py
.github/workflows/: build.yml
data/: bus.csv  index.csv  index_2019.csv  index_2023.csv  students.csv
docs/source/: api.rst  conf.py  index.rst  installation.rst  methods.rst  usage.rst
notebooks/: example1.ipynb  quickstart.ipynb  students_example.ipynb  wmsd_case_studies.ipynb
src/: MSDTransformer.py  WMSDTransformer.py  __ImprovementActions.py  bus.csv  bus_example.ipynb  setup.py  students_example.ipynb
src/utils/: max_std_calculator_gurobi.py  max_std_calculator_scip.py  numba_inverse_transform.py  population_reduction.py  single_criterion_exact_improvement.py
tests/: conftest.py  test_MSDTransformer_calculate.py  test_MSDTransformer_checkImprovementActions.py  test_MSDTransformer_checkInput.py  test_WMSDTransformer_calculate.py  test_WMSDTransformer_checkImprovementActions.py  test_WMSDTransformer_checkInput.py
