[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmsd"
version = "1.0.0"
description = "TOPSIS ranking and interpretation using WMSD-space"
readme = "README.md"
dynamic = ["dependencies"]
authors = [
    { name = "Maciej Woś", email = "maciejwos01@gmail.com" },
    { name = "Bogna Kilanowska", email = "bogna.kilanowska@student.put.poznan.pl" },
    { name = "Adam Ciesiółka", email = "adam.ciesiolka@student.put.poznan.pl" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["visualization", "ranking", "multi-criteria-decision-aid", "mcda", "topsis", "explainability"]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
repository = "https://github.com/dabrze/topsis-msd-improvement-actions"
