[metadata]
name = improvement_actions
version = 0.0.1
authors = [{ name="Example Author", email="author@example.com" }]
description = "A python package for calculating TOPSIS and IA"
readme = "README.md"
requires-python = ">=3.9"
url = https://github.com/dabrze/topsis-msd-improvement-actions
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
