[metadata]
name = wmsdia
version = 0.0.1
authors = [{ name="Maciej Woś", email="maciejwos01@gmail.com" }]
description = "A python package for TOPSIS ranking and interpretation using WMSD-space with suggestions for improvement actions"
readme = "README.md"
requires-python = ">=3.9"
url = https://github.com/dabrze/topsis-msd-improvement-actions
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
